--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "afshin/hexagonal-php",
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Tests\\": "Tests/",
+            "App\\Infrastructure\\Repositories\\MySql\\": "src/Infrastructure/Repositories/MySql/"
         }
     },
     "require": {
@@ -11,7 +13,9 @@
         "slim/slim": "^4.0",
         "slim/psr7": "^1.6",
         "vlucas/phpdotenv": "^5.5",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "ext-pdo": "*",
+        "monolog/monolog": "^3.8"
     },
     "scripts": {
         "install-deps": "composer install",
@@ -21,6 +25,7 @@
         ]
     },
     "require-dev": {
-        "mockery/mockery": "^1.6"
+        "mockery/mockery": "^1.6",
+      "ext-json": "*"
     }
 }
