--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,8 @@
     "name": "afshin/hexagonal-php",
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Tests\\": "Tests/",
-            "App\\Infrastructure\\Repositories\\MySql\\": "src/Infrastructure/Repositories/MySql/"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
+            "App\\": "src/"
+        }
     },
     "require": {
         "php-di/php-di": "^7.0",
@@ -18,7 +13,8 @@
         "vlucas/phpdotenv": "^5.5",
         "phpunit/phpunit": "^9.5",
         "ext-pdo": "*",
-        "monolog/monolog": "^3.8"
+        "monolog/monolog": "^3.8",
+        "caseyamcl/configula": "^5.0"
     },
     "scripts": {
         "install-deps": "composer install",
